src/index.css
@import "tailwindcss";
@import "tw-animate-css";
@import "shadcn/tailwind.css";
@import "@fontsource-variable/inter";

@custom-variant dark (&:is(.dark *));

@theme inline {
    --font-heading: var(--font-sans);
    --font-sans: 'Inter Variable', sans-serif;
    --color-sidebar-ring: var(--sidebar-ring);
    --color-sidebar-border: var(--sidebar-border);
    --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
    --color-sidebar-accent: var(--sidebar-accent);
    --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
    --color-sidebar-primary: var(--sidebar-primary);
    --color-sidebar-foreground: var(--sidebar-foreground);
    --color-sidebar: var(--sidebar);
    --color-chart-5: var(--chart-5);
    --color-chart-4: var(--chart-4);
    --color-chart-3: var(--chart-3);
    --color-chart-2: var(--chart-2);
    --color-chart-1: var(--chart-1);
    --color-ring: var(--ring);
    --color-input: var(--input);
    --color-border: var(--border);
    --color-destructive: var(--destructive);
    --color-accent-foreground: var(--accent-foreground);
    --color-accent: var(--accent);
    --color-muted-foreground: var(--muted-foreground);
    --color-muted: var(--muted);
    --color-secondary-foreground: var(--secondary-foreground);
    --color-secondary: var(--secondary);
    --color-primary-foreground: var(--primary-foreground);
    --color-primary: var(--primary);
    --color-popover-foreground: var(--popover-foreground);
    --color-popover: var(--popover);
    --color-card-foreground: var(--card-foreground);
    --color-card: var(--card);
    --color-foreground: var(--foreground);
    --color-background: var(--background);
    --radius-sm: calc(var(--radius) * 0.6);
    --radius-md: calc(var(--radius) * 0.8);
    --radius-lg: var(--radius);
    --radius-xl: calc(var(--radius) * 1.4);
    --radius-2xl: calc(var(--radius) * 1.8);
    --radius-3xl: calc(var(--radius) * 2.2);
    --radius-4xl: calc(var(--radius) * 2.6);
}

:root {
    --background: oklch(1 0 0);
    --foreground: oklch(0.148 0.004 228.8);
    --card: oklch(1 0 0);
    --card-foreground: oklch(0.148 0.004 228.8);
    --popover: oklch(1 0 0);
    --popover-foreground: oklch(0.148 0.004 228.8);
    --primary: oklch(0.218 0.008 223.9);
    --primary-foreground: oklch(0.987 0.002 197.1);
    --secondary: oklch(0.963 0.002 197.1);
    --secondary-foreground: oklch(0.218 0.008 223.9);
    --muted: oklch(0.963 0.002 197.1);
    --muted-foreground: oklch(0.56 0.021 213.5);
    --accent: oklch(0.963 0.002 197.1);
    --accent-foreground: oklch(0.218 0.008 223.9);
    --destructive: oklch(0.577 0.245 27.325);
    --border: oklch(0.925 0.005 214.3);
    --input: oklch(0.925 0.005 214.3);
    --ring: oklch(0.723 0.014 214.4);
    --chart-1: oklch(0.872 0.007 219.6);
    --chart-2: oklch(0.56 0.021 213.5);
    --chart-3: oklch(0.45 0.017 213.2);
    --chart-4: oklch(0.378 0.015 216);
    --chart-5: oklch(0.275 0.011 216.9);
    --radius: 0.625rem;
    --sidebar: oklch(0.987 0.002 197.1);
    --sidebar-foreground: oklch(0.148 0.004 228.8);
    --sidebar-primary: oklch(0.218 0.008 223.9);
    --sidebar-primary-foreground: oklch(0.987 0.002 197.1);
    --sidebar-accent: oklch(0.963 0.002 197.1);
    --sidebar-accent-foreground: oklch(0.218 0.008 223.9);
    --sidebar-border: oklch(0.925 0.005 214.3);
    --sidebar-ring: oklch(0.723 0.014 214.4);
}

.dark {
    --background: oklch(0.148 0.004 228.8);
    --foreground: oklch(0.987 0.002 197.1);
    --card: oklch(0.218 0.008 223.9);
    --card-foreground: oklch(0.987 0.002 197.1);
    --popover: oklch(0.218 0.008 223.9);
    --popover-foreground: oklch(0.987 0.002 197.1);
    --primary: oklch(0.925 0.005 214.3);
    --primary-foreground: oklch(0.218 0.008 223.9);
    --secondary: oklch(0.275 0.011 216.9);
    --secondary-foreground: oklch(0.987 0.002 197.1);
    --muted: oklch(0.275 0.011 216.9);
    --muted-foreground: oklch(0.723 0.014 214.4);
    --accent: oklch(0.275 0.011 216.9);
    --accent-foreground: oklch(0.987 0.002 197.1);
    --destructive: oklch(0.704 0.191 22.216);
    --border: oklch(1 0 0 / 10%);
    --input: oklch(1 0 0 / 15%);
    --ring: oklch(0.56 0.021 213.5);
    --chart-1: oklch(0.872 0.007 219.6);
    --chart-2: oklch(0.56 0.021 213.5);
    --chart-3: oklch(0.45 0.017 213.2);
    --chart-4: oklch(0.378 0.015 216);
    --chart-5: oklch(0.275 0.011 216.9);
    --sidebar: oklch(0.218 0.008 223.9);
    --sidebar-foreground: oklch(0.987 0.002 197.1);
    --sidebar-primary: oklch(0.488 0.243 264.376);
    --sidebar-primary-foreground: oklch(0.987 0.002 197.1);
    --sidebar-accent: oklch(0.275 0.011 216.9);
    --sidebar-accent-foreground: oklch(0.987 0.002 197.1);
    --sidebar-border: oklch(1 0 0 / 10%);
    --sidebar-ring: oklch(0.56 0.021 213.5);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
    }
  body {
    @apply bg-background text-foreground;
    }
  button:not(:disabled), [role="button"]:not(:disabled) {
    cursor: pointer;
    }
  html {
    @apply font-sans;
    }
}

.maplibregl-popup-content {
  background: transparent !important;
  padding: 0 !important;
  box-shadow: none !important;
  border: none !important;
}

.custom-marker-popup.maplibregl-popup-anchor-bottom .maplibregl-popup-tip {
  border-top-color: var(--background);
}
.custom-marker-popup.maplibregl-popup-anchor-top .maplibregl-popup-tip {
  border-bottom-color: var(--background);
}
.custom-marker-popup.maplibregl-popup-anchor-left .maplibregl-popup-tip {
  border-right-color: var(--background);
}
.custom-marker-popup.maplibregl-popup-anchor-right .maplibregl-popup-tip {
  border-left-color: var(--background);
}

@layer utilities {
  /* Vertical Scrollbar */
  .custom-scrollbar {
    scrollbar-width: thin;
    scrollbar-color: var(--border) transparent;
  }
  .custom-scrollbar::-webkit-scrollbar {
    width: 6px;
  }
  .custom-scrollbar::-webkit-scrollbar-track {
    background: transparent;
  }
  .custom-scrollbar::-webkit-scrollbar-thumb {
    background-color: var(--border);
    border-radius: 20px;
  }

  /* Horizontal Scrollbar */
  .custom-scrollbar-horizontal {
    scrollbar-width: thin;
    scrollbar-color: var(--border) transparent;
  }
  .custom-scrollbar-horizontal::-webkit-scrollbar {
    height: 4px;
  }
  .custom-scrollbar-horizontal::-webkit-scrollbar-track {
    background: transparent;
  }
  .custom-scrollbar-horizontal::-webkit-scrollbar-thumb {
    background-color: var(--border);
    border-radius: 20px;
  }
}

